# tutorial-actions

./: .coverage.MacBook-Pro-de-Manuel.local.30100.XcDsszsx  .coveragerc  LICENSE.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: pruebas.yml  pull-requests-yml
src/tutorial_actions/: persona.py
tests/: __init__.py  test-persona.py
