[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tutorial-actions"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "manuel-jose-marin", email = "mj.marin@uniandes.edu.co" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/manuel-jose-marin/tutorial-actions#readme"
Issues = "https://github.com/manuel-jose-marin/tutorial-actions/issues"
Source = "https://github.com/manuel-jose-marin/tutorial-actions"

[tool.hatch.version]
path = "src/tutorial_actions/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/tutorial_actions tests}"

[tool.coverage.run]
source_pkgs = ["tutorial_actions", "tests"]
branch = true
parallel = true
omit = [
  "src/tutorial_actions/__about__.py",
]

[tool.coverage.paths]
tutorial_actions = ["src/tutorial_actions", "*/tutorial-actions/src/tutorial_actions"]
tests = ["tests", "*/tutorial-actions/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
